fix: 'jumping scrollbar' issue using css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ html {
   scroll-behavior: smooth;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-left: calc(100vw - 100%);
 }
 
 *,
