--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,6 +1,7 @@
 html {
   scroll-behavior: smooth;
   box-sizing: border-box;
+  margin-left: calc(100vw - 100%);
 }
 
 *,
